@@ -22,6 +22,7 @@ version <next>:
 - bwdif_cuda filter
 - Microsoft RLE video encoder
 - Raw AC-4 muxer and demuxer
+- Raw VVC bitstream parser
 
 version 6.0:
 - Radiance HDR image support
